@@ -7,12 +7,13 @@
     <groupId>com.minispring</groupId>
     <artifactId>spring-mini</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
+    <packaging>pom</packaging>
 
     <modules>
 <!--        <module>mini-spring-core</module>-->
 <!--        <module>mini-spring-aop</module>-->
 <!--        <module>mini-spring-demo</module>-->
+        <module>minispring-web</module>
     </modules>
 
     <properties>
@@ -64,9 +65,6 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>3.2.5</version>
-                    <configuration>
-                        <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
-                    </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
